Revised photos; Fixed photos.htm not showing carousel correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,11 @@
 }
 
 .carousel {
-  max-height: 700px;
-  overflow: hidden;
-
+  /* max-height: 600px; */
   
+  width: 800px;
+
+  overflow: hidden;
 }
 
 
